fix(gui): allow language names to wrap in dropdown

--- a/gui/default/assets/css/overrides.css
+++ b/gui/default/assets/css/overrides.css
@@ -217,11 +217,12 @@ input[type="checkbox"].extended-attributes-filter-rule-checkbox {
 li[language-select] > .dropdown-menu {
     column-count: 2;
     column-gap: 0;
+    width: 450px;
 }
 
 li[language-select] > .dropdown-menu > li > a {
-    overflow: hidden;
-    text-overflow: ellipsis;
+    white-space: normal;
+    overflow-wrap: break-word;
 }
 
 .nav>li{
